# sticker-telegram-bot

./: .env.example  .flake8  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  TEST_README.md  alembic.ini  docker-compose.yml  pyproject.toml  test_video_processing.py
.github/workflows/: build-and-deploy.yaml
alembic/: env.py
alembic/versions/: 0001_create_sticker_packs.py  0002_allow_pack_imports_per_chat.py
sticker_telegram_bot/: bot.py  config.py  main.py
sticker_telegram_bot/db/: __init__.py  models.py  repositories.py  session.py
tests/: test_group_packs.py
