[tool.black]
line-length = 88
skip-string-normalization = false

[tool.poetry]
name = "sticker-telegram-bot"
version = "0.1.0"
description = ""
authors = ["Andrew Jarvis <ajarvis7771@gmail.com>"]
readme = "README.md"
packages = [{include = "sticker_telegram_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^22.2"
pillow = "^11.3.0"
pydantic = "^2.11.7"
python-dotenv = "^1.1.1"
emoji = "^2.14.1"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
